plugins {
    id 'java'
    id "org.sonarqube" version "4.4.1.3373"
    id 'org.springframework.boot' version "3.2.1"
    id 'io.spring.dependency-management' version "1.1.4"
    id "jacoco"
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

sonarqube {
    properties {
        property "sonar.coverage.jacoco.xmlReportPaths", "${project.layout.buildDirectory}/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.java.coveragePlugin", "jacoco"
        property "sonar.language", "java"
        property "sonar.token", System.getenv("SONAR_TOKEN")
        property "sonar.organization", "navikt"
        property "sonar.project.monorepo.enabled", true
        property "sonar.projectKey", "testnorge-statisk-data-forvalter"
        property "sonar.projectName", "testnorge-statisk-data-forvalter"
        property "sonar.sourceEncoding", "UTF-8"
    }
}

dependencyManagement {
    applyMavenExclusions = false
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.0'
    }
}

bootJar {
    archiveFileName = "app.jar"
}

repositories {
    mavenCentral()
    mavenLocal()

    maven {
        url = uri('https://packages.confluent.io/maven/')
    }
}

dependencies {
    implementation 'com.google.guava:guava:31.1-jre'

    implementation 'no.nav.testnav.libs:security-core'
    implementation 'no.nav.testnav.libs:servlet-security'
    implementation 'no.nav.testnav.libs:kafka-config'
    implementation 'no.nav.testnav.libs:kafka-producers'
    implementation 'no.nav.testnav.libs:avro-schema'
    implementation 'no.nav.testnav.libs:data-transfer-objects'
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:database'
    implementation 'no.nav.testnav.libs:commands'
    implementation 'no.nav.testnav.libs:csv-converter'

    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'io.confluent:kafka-avro-serializer:7.5.1'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config
    implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
    
    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    implementation 'org.aspectj:aspectjweaver:1.9.19'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
    implementation 'org.postgresql:postgresql'
    implementation 'com.zaxxer:HikariCP'

    implementation 'org.flywaydb:flyway-core'

    implementation 'com.h2database:h2'
    implementation 'org.hibernate.validator:hibernate-validator'
   
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.20'
    implementation 'com.squareup.okhttp3:okhttp:4.9.3'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'no.nav.testnav.libs:testing'
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
}

description = 'testnorge-statisk-data-forvalter'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
